MOdified for the new issue

--- a/lang/lang.json
+++ b/lang/lang.json
@@ -128,39 +128,48 @@
 
     "sg_sec_submit": "How to Submit",
     "sg_submit_p1": "Attach your article in Word (and optionally PDF) and email us. Subject: “Article Submission – SP”.",
-    "sg_btn_email": "submissions@journalofkannada.com",
+    "sg_btn_email": "kumara@claretcollege.edu.in",
     "sg_submit_note": "Use the same email for queries/clarifications.",
-        "about_title": "About Us | Sahithya Prasthana",
+    "about_title": "About Us | Sahithya Prasthana",
     "about_heading": "About the Journal",
     "about_tagline": "A dedicated venue for high-quality research in Kannada studies, literature, and culture.",
-    "about_chip_bimonthly": "Bi-monthly",
+    "about_chip_monthly": "Monthly",
     "about_chip_scope": "Multidisciplinary",
-    "about_chip_review": "Double-blind peer review",
+    "about_chip_review_issn": "Peer-reviewed • ISSN",
     "about_btn_submit": "Submission Guidelines",
     "about_btn_archive": "Browse Archive",
-
-    "about_mission_h": "Our Mission",
-    "about_mission_p": "We provide a platform to publish rigorous research and foster critical dialogue in Kannada studies. We encourage innovative ideas, clarity, and scholarly collaboration.",
-
-    "about_scope_h": "Scope",
-    "about_scope_li1": "Kannada linguistics, literature, folklore, cultural studies.",
-    "about_scope_li2": "Interdisciplinary research connecting allied fields.",
-    "about_scope_li3": "Book reviews, dialogues, and field reports.",
-
-    "about_values_h": "Values",
-    "about_values_li1": "Ethics and originality.",
-    "about_values_li2": "Scholarly rigor and clarity.",
-    "about_values_li3": "Open discourse and diversity.",
-
-    "about_board_h": "Editorial Board",
-    "about_board_p": "Our editorial board comprises esteemed scholars committed to maintaining quality and ethics of publications.",
     "about_btn_board": "View Editorial Board",
+    "about_meet_board": "Meet the board",
 
-    "about_contact_h": "Contact",
+    "about_vision_h": "About / Journal Vision",
+    "about_v1": "Understand Indian languages, literature, and culture.",
+    "about_v2": "Introduce philosophical currents of Indian and Western literature and culture through Kannada literature.",
+    "about_v3": "Highlight literature’s inter-relations with other knowledge disciplines.",
+    "about_v4": "Present new concepts, styles/forms, and perspectives found in Indian and Western literatures.",
+    "about_v5": "Bring marginalized narratives to the forefront.",
+    "about_v6": "Examine political, economic, social, and philosophical influences on Kannada literature and culture.",
+    "about_freq_now": "Note:",
+    "about_freq_text": "The periodical is currently published monthly.",
+
+    "about_rules_h": "Submission Rules for Research Articles",
+    "about_r1": "Submissions may be written in Kannada or English.",
+    "about_r2": "Articles may take a multidisciplinary approach.",
+    "about_r3": "Length: 1,500–2,000 words.",
+    "about_r4": "Font/format: Nudi 01E / Unicode Nudi 01E; font size 14; line spacing 1.5.",
+    "about_r5": "The journal is peer-reviewed and carries an ISSN.",
+    "about_r6": "Submit strictly within the announced window; late submissions will not be accepted.",
+    "about_r7": "No publication fees are charged.",
+    "about_r8": "Abstract, keywords, footnotes, and references are mandatory.",
+    "about_r9": "The manuscript must be free from spelling/orthography errors.",
+    "about_r10": "Provide full postal address, email, and phone number of the author.",
+    "about_r11": "All articles undergo selection by the review committee; only the best are accepted.",
+    "about_r12": "Adhere to standard research ethics and disciplinary norms.",
+    "about_submit_email_btn": "Send via Email",
+    "about_submit_email_note": "Send your manuscript to: kumara@claretcollege.edu.in",
+
     "about_quick_h": "Quick Links",
     "about_explore": "Explore",
     "about_submit": "Submit",
-    "about_get_in_touch": "Get in touch",
 
     "label_email": "Email",
     "label_address": "Address"
@@ -290,39 +299,48 @@
 
     "sg_sec_submit": "ಹೀಗೆ ಸಲ್ಲಿಸಿ",
     "sg_submit_p1": "Word ರೂಪದಲ್ಲಿ (ಐಚ್ಛಿಕವಾಗಿ PDF ಜೊತೆಯಲ್ಲಿ) ಲೇಖನವನ್ನು ಅಟ್ಯಾಚ್ ಮಾಡಿ. ವಿಷಯ (Subject): “Article Submission – SP”.",
-    "sg_btn_email": "submissions@journalofkannada.com",
+    "sg_btn_email": "kumara@claretcollege.edu.in",
     "sg_submit_note": "ಪ್ರಶ್ನೆಗಳು/ಸ್ಪಷ್ಟೀಕರಣಗಳಿಗೆ ಇದೇ ಇಮೇಲ್.",
-     "about_title": "ನಮ್ಮ ಬಗ್ಗೆ | Sahithya Prasthana",
+    "about_title": "ನಮ್ಮ ಬಗ್ಗೆ | Sahithya Prasthana",
     "about_heading": "ಪತ್ರಿಕೆಯ ಪರಿಚಯ",
     "about_tagline": "ಕನ್ನಡ ಅಧ್ಯಯನ, ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಗುಣಮಟ್ಟದ ಸಂಶೋಧನೆಗಾಗಿ ಸಮರ್ಪಿತ ವೇದಿಕೆ.",
-    "about_chip_bimonthly": "ದ್ವೈಮಾಸಿಕ",
+    "about_chip_monthly": "ಮಾಸಿಕ",
     "about_chip_scope": "ಬಹುಶಿಸ್ತೀಯ",
-    "about_chip_review": "ಡಬಲ್-ಬ್ಲೈಂಡ್ ಪಿಯರ್-ರಿವ್ಯೂ",
+    "about_chip_review_issn": "ಪಿಯರ್-ರಿವ್ಯೂಡ್ • ISSN",
     "about_btn_submit": "ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ",
     "about_btn_archive": "ಆರ್ಕೈವ್ ವೀಕ್ಷಿಸಿ",
-
-    "about_mission_h": "ನಮ್ಮ ಮಿಷನ್",
-    "about_mission_p": "ಕನ್ನಡ ಅಧ್ಯಯನ ಕ್ಷೇತ್ರದಲ್ಲಿ ದೃಢವಾದ ಸಂಶೋಧನೆ ಪ್ರಕಟಿಸಲು ಹಾಗೂ ವಿಮರ್ಶಾತ್ಮಕ ಸಂವಾದವನ್ನು ಉತ್ತೇಜಿಸಲು ವೇದಿಕೆ ಒದಗಿಸುವುದು ನಮ್ಮ ಧ್ಯೇಯ.",
-
-    "about_scope_h": "ವ್ಯಾಪ್ತಿ",
-    "about_scope_li1": "ಕನ್ನಡ ಭಾಷಾಶಾಸ್ತ್ರ, ಸಾಹಿತ್ಯ, ಜನಪದ, ಸಂಸ್ಕೃತಿ ಅಧ್ಯಯನ.",
-    "about_scope_li2": "ಸಂಬಂಧಿತ ಕ್ಷೇತ್ರಗಳ ಅಂತರಶಿಸ್ತೀಯ ಅಧ್ಯಯನಗಳು.",
-    "about_scope_li3": "ಪುಸ್ತಕ ವಿಮರ್ಶೆಗಳು, ಸಂವಾದಗಳು, ಕ್ಷೇತ್ರ ವರದಿಗಳು.",
-
-    "about_values_h": "ಮೌಲ್ಯಗಳು",
-    "about_values_li1": "ನೈತಿಕತೆ ಮತ್ತು ಮೂಲತ್ವ.",
-    "about_values_li2": "ಶೈಕ್ಷಣಿಕ ದೃಢತೆ ಮತ್ತು ಸ್ಪಷ್ಟತೆ.",
-    "about_values_li3": "ಮುಕ್ತ ಚರ್ಚೆ ಮತ್ತು ವೈವಿಧ್ಯ.",
-
-    "about_board_h": "ಸಂಪಾದಕ ಮಂಡಳಿ",
-    "about_board_p": "ಪ್ರಕಾಶನಗಳ ಗುಣಮಟ್ಟ ಮತ್ತು ನೈತಿಕತೆಯನ್ನು ಕಾಪಾಡುವಲ್ಲಿ ಬದ್ಧರಾಗಿರುವ ಖ್ಯಾತ ಪಂಡಿತರು ನಮ್ಮ ಮಂಡಳಿಯಲ್ಲಿ ಸೇರಿದ್ದಾರೆ.",
     "about_btn_board": "ಸಂಪಾದಕ ಮಂಡಳಿ ವೀಕ್ಷಿಸಿ",
+    "about_meet_board": "ಪರಿಚಯ",
 
-    "about_contact_h": "ಸಂಪರ್ಕ",
+    "about_vision_h": "ನಮ್ಮ ಬಗ್ಗೆ / ಪತ್ರಿಕೆಯ ಆಶಯ",
+    "about_v1": "ಭಾರತೀಯ ಭಾಷಾ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯನ್ನು ಅರ್ಥೈಸಿಕೊಳ್ಳುವುದು.",
+    "about_v2": "ಭಾರತೀಯ ಭಾಷೆಗಳ ಸಾಹಿತ್ಯವನ್ನು ಒಳಗೊಂಡಂತೆ ಪಾಶ್ಚಾತ್ಯ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ತಾತ್ವಿಕ ಚಿಂತನೆಗಳನ್ನು ಕನ್ನಡ ಸಾಹಿತ್ಯದ ಮೂಲಕ ಪರಿಚಯಿಸುವುದು.",
+    "about_v3": "ಸಾಹಿತ್ಯವು ಇತರ ಜ್ಞಾನಶಿಸ್ತುಗಳೊಟ್ಟಿಗೆ ಹೊಂದಿರುವ ಅಂತರ್‌ಸಂಬಂಧವನ್ನು ಪರಿಚಯಿಸುವುದು.",
+    "about_v4": "ಭಾರತೀಯ ಹಾಗೂ ಪಾಶ್ಚಾತ್ಯ ಸಾಹಿತ್ಯಗಳಲ್ಲಿ ಕಂಡುಬರುವ ಹೊಸ ಪರಿಕಲ್ಪನೆಗಳು, ಶೈಲಿ–ರೂಪಗಳು, ನೋಟ–ಧೋರಣೆಗಳನ್ನು ಪರಿಚಯಿಸುವುದು.",
+    "about_v5": "ಅಂಚಿಗೆ ತಳ್ಳಲ್ಪಟ್ಟವರ ಕಥಾನಕಗಳನ್ನು ಮುನ್ನೆಲೆಗೆ ತರುವುದು.",
+    "about_v6": "ಕನ್ನಡ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಮೇಲೆ ರಾಜಕೀಯ, ಆರ್ಥಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ತಾತ್ವಿಕ ಪ್ರಭಾವಗಳನ್ನು ಪರಿಶೀಲಿಸುವುದು.",
+    "about_freq_now": "ಸೂಚನೆ:",
+    "about_freq_text": "ಪ್ರಸ್ತುತ ಈ ನಿಯತಕಾಲಿಕೆ ಮಾಸಿಕವಾಗಿ ಪ್ರಕಟವಾಗುತ್ತದೆ.",
+
+    "about_rules_h": "ಸಂಶೋಧನ ಪ್ರಬಂಧಗಳನ್ನು ಕಳಿಸುವಾಗ ಅನುಸರಿಸಬೇಕಾದ ನಿಯಮಗಳು",
+    "about_r1": "ತಮ್ಮ ಬರಹಗಳು ಕನ್ನಡ ಮತ್ತು ಇಂಗ್ಲೀಷ್ ಎರಡೂ ಭಾಷೆಯಲ್ಲಿ ಬರೆಯಬಹುದು.",
+    "about_r2": "ಲೇಖನಗಳು ಬಹುಶಿಸ್ತೀಯ ಆಯಾಮವನ್ನು ಹೊಂದಿರಬಹುದು.",
+    "about_r3": "ಲೇಖನವು ೧೫೦೦ ರಿಂದ ೨೦೦೦ ಪದಗಳ ಮಿತಿಯಲ್ಲಿರಬೇಕು.",
+    "about_r4": "ನುಡಿ 01E/ಯುನಿಕೋಡ್ ನುಡಿ 01E; ಅಕ್ಷರ ಗಾತ್ರ 14; ವಾಕ್ಯ ಮಧ್ಯದ ಅಂತರ 1.5 ಇರಬೇಕು.",
+    "about_r5": "ಪತ್ರಿಕೆ ಪೀರ್ ರಿವ್ಯೂಡ್ ಆಗಿದ್ದು ISSN ಹೊಂದಿರುತ್ತದೆ.",
+    "about_r6": "ನಿಗದಿತ ಕಾಲಾವಧಿಯಲ್ಲಿ ಮಾತ್ರ ಲೇಖನಗಳನ್ನು ಕಳುಹಿಸಬೇಕು; ನಂತರ ಬಂದ ಲೇಖನಗಳನ್ನು ಸ್ವೀಕರಿಸಲಾಗುವುದಿಲ್ಲ.",
+    "about_r7": "ಲೇಖನ ಪ್ರಕಟಣೆಗೆ ಯಾವುದೇ ಶುಲ್ಕವಿಲ್ಲ.",
+    "about_r8": "ಸಾರಲೇಖ, ಮುಖ್ಯ ಪದಗಳು, ಅಡಿಟಿಪ್ಪಣಿಗಳು ಮತ್ತು ಪರಾಮರ್ಶನ ಗ್ರಂಥಗಳು ಕಡ್ಡಾಯ.",
+    "about_r9": "ಕಾಗುಣಿತ ದೋಷಗಳಿರಬಾರದು.",
+    "about_r10": "ಪ್ರಬಂಧದ ಲೇಖಕರ ಪೂರ್ಣ ವಿಳಾಸ, ಇಮೇಲ್ ಹಾಗೂ ದೂರವಾಣಿ ಸಂಖ್ಯೆ ಕಡ್ಡಾಯವಾಗಿ ನಮೂದಿಸಿರಬೇಕು.",
+    "about_r11": "ಲೇಖನ ಪ್ರಕಟಣೆ ಪರಿಶೀಲನಾ ಸಮಿತಿಯ ಆಯ್ಕೆಗೆ ಒಳಪಡುತ್ತದೆ; ಅತ್ಯುತ್ತಮ ಲೇಖನಗಳನ್ನು ಮಾತ್ರ ಆಯ್ಕೆ ಮಾಡಲಾಗುತ್ತದೆ.",
+    "about_r12": "ಸಂಶೋಧನಾ ಶಿಸ್ತಿನ ನಿಯಮಾವಳಿಗಳಿಗೆ ಅನುಗುಣವಾಗಿರಬೇಕು.",
+    "about_submit_email_btn": "ಇ-ಮೇಲ್ ಮೂಲಕ ಕಳುಹಿಸಿ",
+    "about_submit_email_note": "ನೀವು ಕಳುಹಿಸಬೇಕಾದ ಇ-ಮೇಲ್ ವಿಳಾಸ: kumara@claretcollege.edu.in",
+
     "about_quick_h": "ತ್ವರಿತ ಲಿಂಕ್‌ಗಳು",
     "about_explore": "ಅನ್ವೇಷಿಸಿ",
     "about_submit": "ಸಲ್ಲಿಸಿ",
-    "about_get_in_touch": "ಸಂಪರ್ಕ",
 
     "label_email": "ಇಮೇಲ್",
 
