--- a/lang/lang.json
+++ b/lang/lang.json
@@ -318,9 +318,9 @@
     "about_v3": "ಸಾಹಿತ್ಯವು ಇತರ ಜ್ಞಾನಶಿಸ್ತುಗಳೊಟ್ಟಿಗೆ ಹೊಂದಿರುವ ಅಂತರ್‌ಸಂಬಂಧವನ್ನು ಪರಿಚಯಿಸುವುದು.",
     "about_v4": "ಭಾರತೀಯ ಹಾಗೂ ಪಾಶ್ಚಾತ್ಯ ಸಾಹಿತ್ಯಗಳಲ್ಲಿ ಕಂಡುಬರುವ ಹೊಸ ಪರಿಕಲ್ಪನೆಗಳು, ಶೈಲಿ–ರೂಪಗಳು, ನೋಟ–ಧೋರಣೆಗಳನ್ನು ಪರಿಚಯಿಸುವುದು.",
     "about_v5": "ಅಂಚಿಗೆ ತಳ್ಳಲ್ಪಟ್ಟವರ ಕಥಾನಕಗಳನ್ನು ಮುನ್ನೆಲೆಗೆ ತರುವುದು.",
-    "about_v6": "ಕನ್ನಡ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಮೇಲೆ ರಾಜಕೀಯ, ಆರ್ಥಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ತಾತ್ವಿಕ ಪ್ರಭಾವಗಳನ್ನು ಪರಿಶೀಲಿಸುವುದು.",
+    "about_v6": "ಕನ್ನಡ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಮೇಲೆ ರಾಜಕೀಯ, ಆರ್ಥಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ತಾತ್ವಿಕ ಪ್ರಭಾವಗಳನ್ನು ಪರಿಶೀಲಿಸುವುದು. ಮೊದಲಾದ ಆಶಯಗಳನ್ನು ಸಾಹಿತ್ಯ ಪ್ರಸ್ತಾನ ಪತ್ರಿಕೆಯು ಹೊಂದಿರುತ್ತದೆ.",
     "about_freq_now": "ಸೂಚನೆ:",
-    "about_freq_text": "ಪ್ರಸ್ತುತ ಈ ನಿಯತಕಾಲಿಕೆ ಮಾಸಿಕವಾಗಿ ಪ್ರಕಟವಾಗುತ್ತದೆ.",
+    "about_freq_text": "ಪ್ರಸ್ತುತ ಈ ನಿಯತಕಾಲಿಕೆಯು ಮಾಸಿಕದ್ದಾಗಿರುತ್ತದೆ.",
 
     "about_rules_h": "ಸಂಶೋಧನ ಪ್ರಬಂಧಗಳನ್ನು ಕಳಿಸುವಾಗ ಅನುಸರಿಸಬೇಕಾದ ನಿಯಮಗಳು",
     "about_r1": "ತಮ್ಮ ಬರಹಗಳು ಕನ್ನಡ ಮತ್ತು ಇಂಗ್ಲೀಷ್ ಎರಡೂ ಭಾಷೆಯಲ್ಲಿ ಬರೆಯಬಹುದು.",
