Corrected pdf button color

--- a/lang/lang.json
+++ b/lang/lang.json
@@ -124,14 +124,14 @@
 
     "sg_sec_submit": "How to Submit",
     "sg_submit_p1": "Attach your article in Word (and optionally PDF) and email us. Subject: “Article Submission – SP”.",
-    "sg_btn_email": "kumara@claretcollege.edu.in",
+    "sg_btn_email": "sahityaprasthana@gmail.com",
     "sg_submit_note": "Use the same email for queries/clarifications.",
     "about_title": "About Us | Sahithya Prasthana",
     "about_heading": "About the Journal",
     "about_tagline": "A dedicated venue for high-quality research in Kannada studies, literature, and culture.",
-    "about_chip_monthly": "Monthly",
+    "about_chip_monthly": "Bi-Monthly",
     "about_chip_scope": "Multidisciplinary",
-    "about_chip_review_issn": "Peer-reviewed • ISSN",
+    "about_chip_review_issn": "Peer-reviewed",
     "about_btn_submit": "Submission Guidelines",
     "about_btn_archive": "Browse Archive",
     "about_btn_board": "View Editorial Board",
@@ -152,7 +152,7 @@
     "about_r2": "Articles may take a multidisciplinary approach.",
     "about_r3": "Length: 1,500–2,000 words.",
     "about_r4": "Font/format: Nudi 01E / Unicode Nudi 01E; font size 14; line spacing 1.5.",
-    "about_r5": "The journal is peer-reviewed and carries an ISSN.",
+    "about_r5": "The journal is peer-reviewed.",
     "about_r6": "Submit strictly within the announced window; late submissions will not be accepted.",
     "about_r7": "No publication fees are charged.",
     "about_r8": "Abstract, keywords, footnotes, and references are mandatory.",
@@ -161,7 +161,7 @@
     "about_r11": "All articles undergo selection by the review committee; only the best are accepted.",
     "about_r12": "Adhere to standard research ethics and disciplinary norms.",
     "about_submit_email_btn": "Send via Email",
-    "about_submit_email_note": "Send your manuscript to: kumara@claretcollege.edu.in",
+    "about_submit_email_note": "Send your manuscript to: sahityaprasthana@gmail.com",
 
     "about_quick_h": "Quick Links",
     "about_explore": "Explore",
@@ -255,7 +255,7 @@
     "sg_heading": "ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿಗಳು",
     "sg_subtitle": "ಕನ್ನಡ ಅಧ್ಯಯನಗಳ ಕುರಿತ ನಿಮ್ಮ ಮೂಲ ಸಂಶೋಧನೆ/ಲೇಖನಗಳನ್ನು ಪ್ರಕಟಿಸಲು ಮಾರ್ಗಸೂಚಿಗಳು.",
     "sg_chip_freq": "ದ್ವೈಮಾಸಿಕ",
-    "sg_chip_scope": "ಬಹುಶಿಸ್ತೀಯ ಕಣಜ",
+    "sg_chip_scope": "ಬಹುಶಿಸ್ತೀಯ",
     "sg_chip_review": "ಡಬಲ್-ಬ್ಲೈಂಡ್ ಪಿಯರ್-ರಿವ್ಯೂ",
     "sg_btn_submit": "ಇಮೇಲ್ ಮೂಲಕ ಸಲ್ಲಿಸಿ",
     "sg_btn_archive": "ಆರ್ಕೈವ್ ವೀಕ್ಷಿಸಿ",
@@ -297,14 +297,14 @@
 
     "sg_sec_submit": "ಹೀಗೆ ಸಲ್ಲಿಸಿ",
     "sg_submit_p1": "Word ರೂಪದಲ್ಲಿ (ಐಚ್ಛಿಕವಾಗಿ PDF ಜೊತೆಯಲ್ಲಿ) ಲೇಖನವನ್ನು ಅಟ್ಯಾಚ್ ಮಾಡಿ. ವಿಷಯ (Subject): “Article Submission – SP”.",
-    "sg_btn_email": "kumara@claretcollege.edu.in",
+    "sg_btn_email": "sahityaprasthana@gmail.com",
     "sg_submit_note": "ಪ್ರಶ್ನೆಗಳು/ಸ್ಪಷ್ಟೀಕರಣಗಳಿಗೆ ಇದೇ ಇಮೇಲ್.",
     "about_title": "ನಮ್ಮ ಬಗ್ಗೆ | Sahithya Prasthana",
     "about_heading": "ಪತ್ರಿಕೆಯ ಪರಿಚಯ",
     "about_tagline": "ಕನ್ನಡ ಅಧ್ಯಯನ, ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಗುಣಮಟ್ಟದ ಸಂಶೋಧನೆಗಾಗಿ ಸಮರ್ಪಿತ ವೇದಿಕೆ.",
-    "about_chip_monthly": "ಮಾಸಿಕ",
+    "about_chip_monthly": "ದ್ವೈಮಾಸಿಕ",
     "about_chip_scope": "ಬಹುಶಿಸ್ತೀಯ",
-    "about_chip_review_issn": "ಪಿಯರ್-ರಿವ್ಯೂಡ್ • ISSN",
+    "about_chip_review_issn": "ಪಿಯರ್-ರಿವ್ಯೂಡ್",
     "about_btn_submit": "ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ",
     "about_btn_archive": "ಆರ್ಕೈವ್ ವೀಕ್ಷಿಸಿ",
     "about_btn_board": "ಸಂಪಾದಕ ಮಂಡಳಿ ವೀಕ್ಷಿಸಿ",
@@ -325,7 +325,7 @@
     "about_r2": "ಲೇಖನಗಳು ಬಹುಶಿಸ್ತೀಯ ಆಯಾಮವನ್ನು ಹೊಂದಿರಬಹುದು.",
     "about_r3": "ಲೇಖನವು ೧೫೦೦ ರಿಂದ ೨೦೦೦ ಪದಗಳ ಮಿತಿಯಲ್ಲಿರಬೇಕು.",
     "about_r4": "ನುಡಿ 01E/ಯುನಿಕೋಡ್ ನುಡಿ 01E; ಅಕ್ಷರ ಗಾತ್ರ 14; ವಾಕ್ಯ ಮಧ್ಯದ ಅಂತರ 1.5 ಇರಬೇಕು.",
-    "about_r5": "ಪತ್ರಿಕೆ ಪೀರ್ ರಿವ್ಯೂಡ್ ಆಗಿದ್ದು ISSN ಹೊಂದಿರುತ್ತದೆ.",
+    "about_r5": "ಪತ್ರಿಕೆ ಪೀರ್ ರಿವ್ಯೂಡ್ ಆಗಿರುತ್ತದೆ.",
     "about_r6": "ನಿಗದಿತ ಕಾಲಾವಧಿಯಲ್ಲಿ ಮಾತ್ರ ಲೇಖನಗಳನ್ನು ಕಳುಹಿಸಬೇಕು; ನಂತರ ಬಂದ ಲೇಖನಗಳನ್ನು ಸ್ವೀಕರಿಸಲಾಗುವುದಿಲ್ಲ.",
     "about_r7": "ಲೇಖನ ಪ್ರಕಟಣೆಗೆ ಯಾವುದೇ ಶುಲ್ಕವಿಲ್ಲ.",
     "about_r8": "ಸಾರಲೇಖ, ಮುಖ್ಯ ಪದಗಳು, ಅಡಿಟಿಪ್ಪಣಿಗಳು ಮತ್ತು ಪರಾಮರ್ಶನ ಗ್ರಂಥಗಳು ಕಡ್ಡಾಯ.",
@@ -334,7 +334,7 @@
     "about_r11": "ಲೇಖನ ಪ್ರಕಟಣೆ ಪರಿಶೀಲನಾ ಸಮಿತಿಯ ಆಯ್ಕೆಗೆ ಒಳಪಡುತ್ತದೆ; ಅತ್ಯುತ್ತಮ ಲೇಖನಗಳನ್ನು ಮಾತ್ರ ಆಯ್ಕೆ ಮಾಡಲಾಗುತ್ತದೆ.",
     "about_r12": "ಸಂಶೋಧನಾ ಶಿಸ್ತಿನ ನಿಯಮಾವಳಿಗಳಿಗೆ ಅನುಗುಣವಾಗಿರಬೇಕು.",
     "about_submit_email_btn": "ಇ-ಮೇಲ್ ಮೂಲಕ ಕಳುಹಿಸಿ",
-    "about_submit_email_note": "ನೀವು ಕಳುಹಿಸಬೇಕಾದ ಇ-ಮೇಲ್ ವಿಳಾಸ: kumara@claretcollege.edu.in",
+    "about_submit_email_note": "ನೀವು ಕಳುಹಿಸಬೇಕಾದ ಇ-ಮೇಲ್ ವಿಳಾಸ: sahityaprasthana@gmail.com",
 
     "about_quick_h": "ತ್ವರಿತ ಲಿಂಕ್‌ಗಳು",
     "about_explore": "ಅನ್ವೇಷಿಸಿ",
