Corrected pdf button color

--- a/lang/lang.json
+++ b/lang/lang.json
@@ -321,8 +321,8 @@
     "about_freq_text": "ಪ್ರಸ್ತುತ ಈ ನಿಯತಕಾಲಿಕೆಯು ಮಾಸಿಕದ್ದಾಗಿರುತ್ತದೆ.",
 
     "about_rules_h": "ಸಂಶೋಧನ ಪ್ರಬಂಧಗಳನ್ನು ಕಳಿಸುವಾಗ ಅನುಸರಿಸಬೇಕಾದ ನಿಯಮಗಳು",
-    "about_r1": "ತಮ್ಮ ಬರಹಗಳು ಕನ್ನಡ ಮತ್ತು ಇಂಗ್ಲೀಷ್ ಎರಡೂ ಭಾಷೆಯಲ್ಲಿ ಬರೆಯಬಹುದು.",
-    "about_r2": "ಲೇಖನಗಳು ಬಹುಶಿಸ್ತೀಯ ಆಯಾಮವನ್ನು ಹೊಂದಿರಬಹುದು.",
+    "about_r1": "ತಮ್ಮ ಬರಹಗಳು ಕನ್ನಡ ಮತ್ತು ಇಂಗ್ಲೀಷ್ ಎರಡೂ ಭಾಷೆಯಲ್ಲಿ ಇರಬಹುದು.",
+    "about_r2": "ಲೇಖನಗಳು ಬಹುಶಿಸ್ತೀಯ ಆಯಾಮವನ್ನು ಹೊಂದಿರಬೇಕು.",
     "about_r3": "ಲೇಖನವು ೧೫೦೦ ರಿಂದ ೨೦೦೦ ಪದಗಳ ಮಿತಿಯಲ್ಲಿರಬೇಕು.",
     "about_r4": "ನುಡಿ 01E/ಯುನಿಕೋಡ್ ನುಡಿ 01E; ಅಕ್ಷರ ಗಾತ್ರ 14; ವಾಕ್ಯ ಮಧ್ಯದ ಅಂತರ 1.5 ಇರಬೇಕು.",
     "about_r5": "ಪತ್ರಿಕೆ ಪೀರ್ ರಿವ್ಯೂಡ್ ಆಗಿರುತ್ತದೆ.",
