Added chief editor address

--- a/lang/lang.json
+++ b/lang/lang.json
@@ -19,9 +19,9 @@
 
     "eb_title": "Editorial Board",
     "eb_intro": "Honorable members of our editorial board.",
-    "eb_sec_editor": "Editor",
+    "eb_sec_editor": "Chief Editor",
     "eb_editor_name": "Dr. Kumar Indrabetta",
-    "eb_editor_affil": "Assistant Professor, St. Claret College, Jalahalli, Bengaluru.",
+    "eb_editor_affil": "Assistant Professor, St. Claret College, Jalahalli, Bengaluru - 560013.",
 
     "eb_sec_assoc": "Associate Editors",
     "eb_assoc_1_name": "Dr. Hanumantharayappa S.B.",
@@ -199,9 +199,9 @@
 
     "eb_title": "ಸಂಪಾದಕ ಮಂಡಳಿ",
     "eb_intro": "ನಮ್ಮ ಸಂಪಾದಕ ಮಂಡಳಿಯ ಗೌರವಾನ್ವಿತ ಸದಸ್ಯರು.",
-    "eb_sec_editor": "ಸಂಪಾದಕರು",
+    "eb_sec_editor": "ಮುಖ್ಯ ಸಂಪಾದಕರು",
     "eb_editor_name": "ಡಾ. ಕುಮಾರ ಇಂದ್ರಬೆಟ್ಟ",
-    "eb_editor_affil": "ಸಹಾಯಕ ಪ್ರಾಧ್ಯಾಪಕರು, ಸೈಂಟ್ ಕ್ಲಾರೇಟ್ ಕಾಲೇಜು, ಜಾಲಹಳ್ಳಿ, ಬೆಂಗಳೂರು.",
+    "eb_editor_affil": "ಸಹಾಯಕ ಪ್ರಾಧ್ಯಾಪಕರು, ಸೈಂಟ್ ಕ್ಲಾರೇಟ್ ಕಾಲೇಜು, ಜಾಲಹಳ್ಳಿ, ಬೆಂಗಳೂರು - 560013.",
     "label_phone": "ಮೋ:",
     "eb_sec_assoc": "ಸಹ ಸಂಪಾದಕರು",
     "eb_assoc_1_name": "ಡಾ. ಹನುಮಂತರಾಯಪ್ಪ ಎಸ್. ಬಿ.",
